# PolarFP-VINS

./: .gitignore  CLAUDE.md  README.md  add_superpoint_plan.md  plan_clean_code.md  polarfp_v2_reconstruction_plan.md  reconstruct_v2_2_plan.md  tmp_doc_reverse_match.md  v2_5_global_feature_pool_plan.md
.claude/: settings.json
config/: vins_rviz_config.rviz
config/arena/: TRI050S-spin2.yaml  arena_imu_config.yaml  arena_spin4_imu_config.yaml
config/bhcc/: TRI050S-spin4.yaml  bhcc_mono_imu_config.yaml  bhcc_stereo_config.yaml  bhcc_stereo_imu_config.yaml
config/dark/: TRI050S-spin4.yaml  dark_mono_imu_config.yaml
paper_codes/: CLAUDE.md
paper_codes/1_vis_polar_channel/: CMakeLists.txt  PolarChannel.cpp  README.md  extract_first_frames.py  main.cpp  plan.md  vis_polar_channel_main.cpp
paper_codes/2_filter_compare/: CMakeLists.txt  README.md  filter_compare_1.cpp  filter_compare_main.cpp  filter_compare_table2.cpp  get_data_2.py  get_data_2_stream.py  plan_2.md  table1_params.tex  table2_metrics.tex  visualize_res.py
paper_codes/2_filter_compare/figures/: planC_summary_table.md
paper_codes/3_fp_compare/: CMakeLists.txt  README.md  data_stream  fp_compare_1.cpp  fp_compare_table3.cpp  get_data_2_stream.py  get_data_3.py  plan_3.md  table_4.tex  visualize_res.py
paper_codes/3_fp_compare/figures/: fp_summary_table.md
paper_codes/4_polarfp_statistics/: plan_polarfp_stats.md  stats_table.tex  vis_polarfp_stats.py
paper_codes/4_polarfp_statistics/fig/: stats_table.tex
paper_codes/6_melt_channel/: analysis_plan.md  plot_ablation.py
paper_codes/6_melt_channel/output/: table_ablation.tex
paper_codes/ref_paper/: fig_global_feature_pool_prompt.txt  global_feature_pool_algorithm.tex  part_1.tex  part_2.tex  structure_prompt.md
paper_codes/utilities/: PolarChannel.cpp  PolarChannel.h
polarfp_camera_models/: CMakeLists.txt  package.xml
polarfp_vins_estimator/: CMakeLists.txt
polarfp_vins_estimator/docs/: compare_polarfpv1_1_vins.md  polarfp_v2_reconstruction_plan.md  v2_3_add_superpoint_plan.md  v2_5_4_clean_code_plan.md  v2_5_global_feature_pool_plan.md  v3_stereo_support_plan.md
polarfp_vins_estimator/src/: rosNodeTest.cpp
polarfp_vins_estimator/src/estimator/: estimator.cpp  estimator.h  parameters.cpp  parameters.h
polarfp_vins_estimator/src/featureTracker/: PolarChannel.cpp  PolarChannel.h  feature_tracker.cpp  feature_tracker.h  feature_tracker_detector.cpp  feature_tracker_detector.h  feature_tracker_matcher.cpp  feature_tracker_matcher.h  global_feature_pool.cpp  superpoint_detector.cpp  superpoint_detector.h
polarfp_vins_estimator/src/test/: test_filter.cpp  test_guide_filter.cpp  test_visualize.cpp
polarfp_vins_estimator/src/utility/: visualization.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/docs/: v3_stereo_support_plan.md
vins_estimator/launch/: vins_arena_imu.launch  vins_arena_imu_detect.launch  vins_optor_imu.launch  vins_rviz.launch
vins_estimator/nn/: convert_to_torchscript.py
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  parameters.cpp  parameters.h
vins_estimator/src/featureTracker/: PolarChannel.cpp  PolarChannel.h  feature_tracker.cpp  feature_tracker.h  feature_tracker_detector.cpp  feature_tracker_detector.h  feature_tracker_matcher.cpp  feature_tracker_matcher.h  nanoflann.hpp  polarfp_tracker.cpp  polarfp_tracker.h  superpoint_detector.cpp  superpoint_detector.h
vins_estimator/src/initial/: initial_sfm.cpp
vins_estimator/src/test/: test_bilateral_filter.cpp  test_guide_filter.cpp  test_nlm_filter.cpp
vins_estimator/src/utility/: visualization.cpp
